playing information in weather details screen

--- a/src/app/screens/city-weather-details/city-weather-details.component.html
+++ b/src/app/screens/city-weather-details/city-weather-details.component.html
@@ -1,6 +1,18 @@
 <div class="container">
     <app-loader *ngIf="this.weatherLoading$ | async"></app-loader>
     <section class="weather">
+        <div class="weather-details">
+            <div class="weather-detail">
+                Weather: {{(weather$ | async)?.weather?.at(0)?.main}}
+            </div>
+            <div class="weather-detail">
+                Description: {{(weather$ | async)?.weather?.at(0)?.description}}
+            </div>
+        </div>
+        <div>
+            <img *ngIf="!(weatherLoading$ | async)"
+                [src]="'http://openweathermap.org/img/wn/' + (weather$ | async)?.weather?.at(0)?.icon + '@2x.png'">
+        </div>
 
     </section>
     <app-loader *ngIf="this.forecastLoading$ | async"></app-loader>
