--- a/src/app/screens/city-weather-details/city-weather-details.component.sass
+++ b/src/app/screens/city-weather-details/city-weather-details.component.sass
@@ -16,7 +16,24 @@
         color: #0e0e0e
         font-family: system-ui, sans-serif
         font-size: 2rem
+        display: flex
+        justify-content: center
+        align-items: center
     .weather
-        background-color: #fff554
+        background-color: #0a0a0a
     .forecast
         background-color: #ff5555
+
+.weather-details
+    background: rgb(31,31,31)
+    background: linear-gradient(225deg, rgba(31,31,31,1) 0%, rgba(43,43,43,1) 34%, rgba(0,0,0,1) 100%)
+    position: relative
+    padding: 2em
+    border-radius: 1em
+    color: white
+
+.temperature
+    position: absolute
+    bottom: 20px
+    right: 20px
+    font-size: 3rem
