--- a/src/app/screens/home/home.component.html
+++ b/src/app/screens/home/home.component.html
@@ -2,7 +2,8 @@
     <input class="input" type="text" placeholder="Search by city name" (input)="handleTextChange($event)" />
     <ul class="list-container">
         <li *ngFor="let city of cities$ | async" class="city">
-            <a [routerLink]="['/weather']" [queryParams]="{lat: city.lat, lon: city.lon}">{{city.name}},
+            <a (click)="clearCities()" [routerLink]="['/weather']"
+                [queryParams]="{lat: city.lat, lon: city.lon}">{{city.name}},
                 {{city.country}},
                 {{city.state}}</a>
         </li>
