--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import 'material-symbols'
 *
     box-sizing: border-box
     margin: 0
