--- a/src/app/screens/city-weather-details/city-weather-details.component.sass
+++ b/src/app/screens/city-weather-details/city-weather-details.component.sass
@@ -1,29 +1,27 @@
 //scroll snapping
 .container
-    scroll-snap-type: y mandatory
     height: 100vh
-    overflow-y: scroll
     background-color: #e6e6e6
     color: #0e0e0e
     font-family: system-ui, sans-serif
     font-size: 2rem
     text-align: center
-    scroll-behavior: smooth
     position: relative
+    display: flex
+    flex-direction: column
+    justify-content: center
 
-    section
-        scroll-snap-align: start
-        height: 100vh
+    .weather
+        background-color: #0a0a0a
+        display: flex
+        flex-direction: column
+        justify-content: center
         color: #0e0e0e
         font-family: system-ui, sans-serif
         font-size: 2rem
-        display: flex
-        justify-content: center
-        align-items: center
-    .weather
-        background-color: #0a0a0a
-    .forecast
-        background-color: #ff5555
+        padding: clamp(0.5em, 10vw, 2em)
+        padding-top: 2em
+        height: 100vh
 
 .meta-details
     display: flex
@@ -44,6 +42,8 @@
 .weather-details
     background: rgb(31,31,31)
     background: linear-gradient(225deg, rgba(31,31,31,1) 0%, rgba(43,43,43,1) 34%, rgba(0,0,0,1) 100%)
+    max-width: 500px
+    margin: auto
     position: relative
     padding: 0.6em
     border-radius: 0.5em
@@ -80,3 +80,9 @@
     a
         text-decoration: none
         color: white
+
+.forecast
+    ul
+        list-style: none
+        display: flex
+        justify-content: space-between
