--- a/src/app/components/forecast-item/forecast-item.component.html
+++ b/src/app/components/forecast-item/forecast-item.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" (click)="onForecastClick()">
     <div>
         {{capitalizeFirstLetter(formatUnixDay(weather?.dt))}}
     </div>
